@@ -2,6 +2,9 @@ SubVersion: $Id$
 
 Log:
 
+- 10/06/2007, version 1.0.6: roms
+	- fixed sending of TIG files: set model as TI84P_USB to enable UTF8 conversion
+
 - 16/04/2007, version 1.0.5: kevin
 	- requires glib >= 2.6.0 rather than 2.4.0 because libticonv requires
 	  it anyway
